; ModuleID = '/home/carl/AnghaBench/linux/drivers/pci/hotplug/extr_rpadlpar_core.c_dlpar_remove_vio_slot.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pci/hotplug/extr_rpadlpar_core.c_dlpar_remove_vio_slot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device_node = type { i32 }
%struct.vio_dev = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.device_node*)* @dlpar_remove_vio_slot to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dlpar_remove_vio_slot(i8* %0, %struct.device_node* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.device_node*, align 8
  %6 = alloca %struct.vio_dev*, align 8
  store i8* %0, i8** %4, align 8
  store %struct.device_node* %1, %struct.device_node** %5, align 8
  %7 = load %struct.device_node*, %struct.device_node** %5, align 8
  %8 = call %struct.vio_dev* @vio_find_node(%struct.device_node* %7)
  store %struct.vio_dev* %8, %struct.vio_dev** %6, align 8
  %9 = load %struct.vio_dev*, %struct.vio_dev** %6, align 8
  %10 = icmp ne %struct.vio_dev* %9, null
  br i1 %10, label %14, label %11

11:                                               ; preds = %2
  %12 = load i32, i32* @EINVAL, align 4
  %13 = sub nsw i32 0, %12
  store i32 %13, i32* %3, align 4
  br label %20

14:                                               ; preds = %2
  %15 = load %struct.vio_dev*, %struct.vio_dev** %6, align 8
  %16 = call i32 @vio_unregister_device(%struct.vio_dev* %15)
  %17 = load %struct.vio_dev*, %struct.vio_dev** %6, align 8
  %18 = getelementptr inbounds %struct.vio_dev, %struct.vio_dev* %17, i32 0, i32 0
  %19 = call i32 @put_device(i32* %18)
  store i32 0, i32* %3, align 4
  br label %20

20:                                               ; preds = %14, %11
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local %struct.vio_dev* @vio_find_node(%struct.device_node*) #1

declare dso_local i32 @vio_unregister_device(%struct.vio_dev*) #1

declare dso_local i32 @put_device(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
